# plugin.Cosserat

.github/workflows/: ci.yml
src/CosseratPlugin/Binding/: CMakeLists.txt
src/CosseratPlugin/Bindings/: CMakeLists.txt
